# python_development_baseline

./: .gitignore  LICENSE  README.md
.devcontainer/: Dockerfile  devcontainer.json
app/: Dockerfile  compose.yaml
app/backend/: main.py  pyproject.toml
app/frontend/: pyproject.toml  streamlit_app.py
app/frontend/app/: main.py
app/frontend_mesop/: main.py  pyproject.toml
app_phidata/: Dockerfile  README.md  compose.yaml
app_phidata/backend/: api.py  pyproject.toml
app_phidata/backend/agents/: web_agent.py
app_phidata/frontend/: api_client.py  data_model.py  dialog.py  main.py  pyproject.toml
app_pydanticai/: Dockerfile  README.md  compose.yaml
app_pydanticai/backend/: api.py  pyproject.toml
app_pydanticai/backend/agents/: search_agent.py
app_pydanticai/frontend/: .gitignore  next.config.ts  package-lock.json  package.json
app_pydanticai/frontend/src/app/: page.tsx
app_pydanticai/frontend/src/app/api/chat/[agent]/[...path]/: route.ts
app_pydanticai/frontend/src/app/api/chat/openapi/: route.ts
app_pydanticai/frontend/src/components/: ChatInput.tsx  ChatMessage.tsx  Sidebar.tsx
app_pydanticai/frontend/src/types/: chat.ts
docs/: uv_environment_management.md
